Slow scroll adjustment when using a mouse wheel https://bugs.webkit.org/show_bug.cgi?id=168300

Reviewed by NOBODY (OOPS!).

Simple is better than complex! Users are complaining that mouse wheel
scroll is too slow. So let's scroll 3x faster, except on Apple platforms
where the current slower scroll speed is intentional.

* Source/WebCore/platform/Scrollbar.h:
(WebCore::Scrollbar::pixelsPerLineStep):